# iddiff

./: .coveragerc  .htmlvalidate.json  CHANGELOG.md  README.md  iddiff.py  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: checks.yml  codeql.yml  pypi-publish.yml
iddiff/: iddiff.py
tests/: test_code_style.py  test_iddiff.py
