[metadata]
name = iddiff
version = attr: iddiff.iddiff.VERSION
description = Internet-Draft diff tool
long_description = file:  README.md, LICENSE
long_description_content_type = text/markdown
keywords = ietf, rfc, id, internet-draft, diff
author = Kesara Nanayakkara Rathnayake
author_email = kesara@fq.nz
url = https://github.com/kesara/iddiff
license = Revised BSD License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = iddiff

[options.entry_points]
console_scripts =
    iddiff = iddiff.iddiff:main
